@@ -1,3 +1,9 @@
+<b><u> v2.13, xx.08.2016</b></u>
+<font color=#FF8C00>&#9830;</font> Adjustments to the Layouts.
+<font color=#FF8C00>&#9830;</font> Update LocPanel, credits Darth Predator.
+<font color=#FF8C00>&#9830;</font> Change the changelog to only show if my UI is installed.
+<font color=#FF8C00>&#9830;</font> Fix an issue wich prevent to use ClassColorOverride if transparent isn't selected.
+
 <b><u> v2.12, 18.08.2016</b></u>
 <font color=#FF8C00>&#9830;</font> An extra frame will show up, if the GMOTD gets updated.
 <font color=#FF8C00>&#9830;</font> Hopefully fix now the lua error in changelog. X.x
